--- a/src/components/shared/Card/Card.module.css
+++ b/src/components/shared/Card/Card.module.css
@@ -6,6 +6,9 @@
   padding: var(--em-card-padding-default, 2rem);
   border-radius: var(--em-card-border-radius-default, 2rem);
   background: var(--em-background-color-default, #f7f7f8);
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
 }
 
 .loadingIcon {
