--- a/src/components/charts/ChartCard/sub-components/ChartCardInfo.module.css
+++ b/src/components/charts/ChartCard/sub-components/ChartCardInfo.module.css
@@ -6,3 +6,21 @@
   /* TODO: add specifics */
   gap: 12px;
 }
+
+.title {
+  color: var(--em-card-empty-title-color-default, #212129);
+  text-align: center;
+  font-size: var(--em-card-empty-title-font-size, 0.875rem);
+  font-style: normal;
+  font-weight: var(--em-card-empty-title-font-weight, 500);
+  line-height: var(--em-card-empty-title-font-line-height, 1rem);
+}
+
+.message {
+  color: var(--em-card-empty-subtitle-color-default, #5c5c66);
+  text-align: center;
+  font-size: var(--em-card-empty-subtitle-font-size, 0.875rem);
+  font-style: normal;
+  font-weight: var(--em-card-empty-subtitle-font-weight, 400);
+  line-height: var(--em-card-empty-subtitle-font-line-height, 1rem);
+}
