--- a/src/components/shared/IconButton/IconButton.module.css
+++ b/src/components/shared/IconButton/IconButton.module.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   padding: var(--em-icon-btn-padding-top, 0.5rem) var(--em-icon-btn-padding-right, 0.125rem)
     var(--em-icon-btn-padding-bottom, 0.5rem) var(--em-icon-btn-padding-left, 0.125rem);
-  border-radius: var(--em-icon-btn-border-radius-default, 624.9375rem);
+  border-radius: var(--em-icon-btn-border-radius-default, 9999px);
   background: var(--em-icon-btn-bg-color-default, #ededf1);
   border: none;
   width: var(--em-icon-btn-size-width, 1.25rem);
