--- a/src/remarkable-ui/charts/shared/IconButton/IconButton.module.css
+++ b/src/remarkable-ui/charts/shared/IconButton/IconButton.module.css
@@ -8,6 +8,7 @@
   width: var(--em-icon-btn-size-width, 1.25rem);
   height: var(--em-icon-btn-size-height, 2rem);
   display: flex;
+  outline: none;
 }
 
 .iconButton:hover {
