fix download image

--- a/src/remarkable-ui-embeddables/components/charts/shared/ChartCard/ChartCard.module.css
+++ b/src/remarkable-ui-embeddables/components/charts/shared/ChartCard/ChartCard.module.css
@@ -1,6 +1,7 @@
-.header {
-  display: flex;
-  gap: var(--em-card-title-padding-default, 1rem);
+.menu {
+  position: absolute;
+  top: var(--em-card-padding-default, 2rem);
+  right: var(--em-card-padding-default, 2rem);
 }
 
 .error svg,
