RUI-38: pie chart improvements

--- a/src/remarkable-ui-embeddables/components/charts/shared/ChartCard/ChartCard.module.css
+++ b/src/remarkable-ui-embeddables/components/charts/shared/ChartCard/ChartCard.module.css
@@ -3,3 +3,8 @@
 .error p {
   color: var(--em-card-error-subtitle-color-default, #d03109);
 }
+
+.rightContent {
+  position: absolute;
+  right: 0;
+}
