--- a/src/remarkable-ui/shared/Card/Card.module.css
+++ b/src/remarkable-ui/shared/Card/Card.module.css
@@ -23,6 +23,7 @@
   display: flex;
   gap: var(--em-card-title-padding-default, 1rem);
   justify-content: space-between;
+  position: relative;
 }
 
 .titles {
