fix default single select display value

--- a/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
@@ -20,8 +20,10 @@
   background: var(--em-select-list-item-background-color-pressed, #ededf1);
 }
 
-.listItem:disabled {
+.listItem.disabled {
   color: var(--em-select-list-item-label-color-disabled, #b8b8bd);
+  pointer-events: none;
+  user-select: none;
 }
 
 .listItem p {
