--- a/src/remarkable-ui/shared/Button/Button.module.css
+++ b/src/remarkable-ui/shared/Button/Button.module.css
@@ -14,7 +14,7 @@
   color: var(--em-primary-btn-label-color-disabled, #b8b8bd);
 }
 
-.button p {
+.button span {
   padding: 0 var(--em-primary-btn-label-padding-default, 0.5rem);
 }
 
@@ -59,7 +59,7 @@
     var(--em-primary-btn-padding-default-left, 0.75rem);
 }
 
-.medium p {
+.medium span {
   /* TODO: on specify font family ticket */
   /* font-family: var(--em-primary-btn-label-font-default-font-family, Inter); */
   font-size: var(--em-primary-btn-label-font-default-size, 0.875rem);
@@ -76,7 +76,7 @@
     var(--em-primary-btn-padding-small-left, 0.375rem);
 }
 
-.small p {
+.small span {
   /* TODO: on specify font family ticket */
   /* font-family: var(--em-primary-btn-label-font-default-font-family, Inter); */
   font-size: var(--em-primary-btn-label-font-small-size, 0.75rem);
