--- a/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
@@ -5,9 +5,18 @@
   padding: var(--em-select-list-item-padding-default, 0.5rem);
   border-radius: var(--em-select-list-item-border-radius-default, 0.5rem);
   background: var(--em-select-list-item-background-color-default, #fff);
+  color: var(--em-select-list-item-label-color-default, #212129);
+  font-style: normal;
+
   display: flex;
   outline: none;
   cursor: pointer;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.listItem span {
+  display: flex;
   align-items: center;
 }
 
@@ -26,18 +35,22 @@
   user-select: none;
 }
 
-.listItem p {
-  display: flex;
-  align-items: center;
+.listItem .startContent p {
   padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
-  color: var(--em-select-list-item-label-color-default, #212129);
   /* font-family: Inter; */
   font-size: var(--em-select-list-item-left-label-font-size, 0.75rem);
-  font-style: normal;
-  font-weight: 500;
+  font-weight: var(--em-select-list-item-left-label-font-weight, 500);
   line-height: var(--em-select-list-item-left-label-font-line-height, 0.875rem);
 }
 
+.listItem .endContent p {
+  color: var(--em-select-list-item-right-label-color-default, #5c5c66);
+  padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
+  /* font-family: var(--em-select-list-item-right-label-font-font-family, Inter); */
+  font-size: var(--em-select-list-item-right-label-font-size, 0.75rem);
+  font-weight: var(--em-select-list-item-right-label-font-weight, 400);
+  line-height: var(--em-select-list-item-right-label-font-line-height, 0.875rem);
+}
 .listItem svg,
 .listItem img {
   width: var(--em-select-list-item-icon-size-width, 1rem);
