--- a/src/remarkable-ui/editors/TextField/TextField.module.css
+++ b/src/remarkable-ui/editors/TextField/TextField.module.css
@@ -38,7 +38,7 @@
   width: 100%;
 
   padding: 0 var(--em-text-input-padding-default, 0.5rem);
-  font-family: var(--em-text-input-label-font-font-family, Inter);
+  /* font-family: var(--em-text-input-label-font-font-family, Inter); */
   font-size: var(--em-text-input-label-font-size, 0.75rem);
   font-style: normal;
   font-weight: var(--em-text-input-label-font-weight, 500);
