--- a/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
+++ b/src/remarkable-ui/editors/select/shared/SelectList/SelectListOptions/SelectListOption/SelectListOption.module.css
@@ -5,10 +5,36 @@
   padding: var(--em-select-list-item-padding-default, 0.5rem);
   border-radius: var(--em-select-list-item-border-radius-default, 0.5rem);
   background: var(--em-select-list-item-background-color-default, #fff);
+  color: var(--em-select-list-item-label-color-default, #212129);
+  font-style: normal;
+
   display: flex;
   outline: none;
   cursor: pointer;
   align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  overflow: hidden;
+}
+
+.listItem .leftContent {
+  flex: 1 1 auto;
+  min-width: 0;
+  overflow: hidden;
+  display: flex;
+}
+
+.listItem .rightContent {
+  flex: 0 0 auto;
+  max-width: 50%;
+  display: flex;
+}
+
+.listItem .leftContent p,
+.listItem .rightContent p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .listItem:hover,
@@ -26,16 +52,31 @@
   user-select: none;
 }
 
-.listItem p {
-  display: flex;
-  align-items: center;
+.listItem .leftContent p {
   padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
-  color: var(--em-select-list-item-label-color-default, #212129);
   /* font-family: Inter; */
   font-size: var(--em-select-list-item-left-label-font-size, 0.75rem);
-  font-style: normal;
-  font-weight: 500;
+  font-weight: var(--em-select-list-item-left-label-font-weight, 500);
   line-height: var(--em-select-list-item-left-label-font-line-height, 0.875rem);
+}
+
+.listItem .rightContent p {
+  color: var(--em-select-list-item-right-label-color-default, #5c5c66);
+  padding: 0 var(--em-select-list-item-label-padding-default, 0.5rem);
+  /* font-family: var(--em-select-list-item-right-label-font-font-family, Inter); */
+  font-size: var(--em-select-list-item-right-label-font-size, 0.75rem);
+  font-weight: var(--em-select-list-item-right-label-font-weight, 400);
+  line-height: var(--em-select-list-item-right-label-font-line-height, 0.875rem);
+}
+
+.listItem.selected {
+  background: var(--em-select-list-item-background-color-selected, #212129);
+  color: var(--em-select-list-item-left-label-color-selected, #fff);
+}
+
+.listItem.selected .leftContent p,
+.listItem.selected .rightContent p {
+  color: inherit;
 }
 
 .listItem svg,
