chore: use css variable

--- a/src/remarkable-ui/shared/Switch/Switch.module.css
+++ b/src/remarkable-ui/shared/Switch/Switch.module.css
@@ -2,7 +2,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: 0.75rem;
+  gap: var(--em-secondary-btn-padding-medium-left, 0.75rem);
 }
 
 .switchLabel {
