--- a/src/remarkable-ui/editors/TextField/TextField.module.css
+++ b/src/remarkable-ui/editors/TextField/TextField.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: var(--em-form-padding-small, 0.5rem);
   .characterCount {
+    display: flex;
     justify-content: flex-start;
     /* font-family: var(--em-form-section-font-font-family, Inter); */
     font-size: var(--em-form-form-font-font-size-required, 0.75rem);
