--- a/src/remarkable-ui/shared/PageOverlay/PageOverlay.module.css
+++ b/src/remarkable-ui/shared/PageOverlay/PageOverlay.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: var(--em-foreground-color-neutral, #000000);
   z-index: 9999;
   display: flex;
   align-items: center;
