fix: align center the text

--- a/src/remarkable-ui/shared/Card/Card.module.css
+++ b/src/remarkable-ui/shared/Card/Card.module.css
@@ -24,6 +24,7 @@
   gap: var(--em-card-title-padding-default, 1rem);
   justify-content: space-between;
   position: relative;
+  align-items: center;
 }
 
 .titles {
