--- a/src/remarkable-ui/shared/ButtonIcon/ButtonIcon.module.css
+++ b/src/remarkable-ui/shared/ButtonIcon/ButtonIcon.module.css
@@ -1,9 +1,9 @@
 .buttonIcon {
   display: flex;
   height: var(--em-primary-btn-size-medium-height, 2.5rem);
-  padding: var(--em-primary-btn-padding-medium-top, 0.75rem) 
-    var(--em-primary-btn-padding-medium-right, 0.75rem) 
-    var(--em-primary-btn-padding-medium-bottom, 0.75rem) 
+  padding: var(--em-primary-btn-padding-medium-top, 0.75rem)
+    var(--em-primary-btn-padding-medium-right, 0.75rem)
+    var(--em-primary-btn-padding-medium-bottom, 0.75rem)
     var(--em-primary-btn-padding-medium-left, 0.75rem);
   align-items: center;
   border: none;
@@ -13,7 +13,7 @@
 
 .primary {
   border-radius: var(--em-primary-btn-border-radius-default, 624.9375rem);
-  background: var(--em-primary-btn-background-color-default, #5C5C66);
+  background: var(--em-primary-btn-background-color-default, #5c5c66);
 }
 
 .primary .icon {
@@ -22,7 +22,7 @@
 
 .secondary {
   border-radius: var(--em-border-radius-500, 624.9375rem);
-  background: var(--em-secondary-btn-background-color-default, #EDEDF1);
+  background: var(--em-secondary-btn-background-color-default, #ededf1);
 }
 
 .secondary .icon {
