--- a/src/remarkable-ui/shared/EmptyStateSkeleton/EmptyStateSkeleton.module.css
+++ b/src/remarkable-ui/shared/EmptyStateSkeleton/EmptyStateSkeleton.module.css
@@ -1,67 +1,66 @@
-    .wrapper {
-    display: flex;
-    gap: var(--em-empty-state-padding-default, 1rem);
-    margin: 0 auto;
-    overflow: hidden;
-    justify-content: center;
+.wrapper {
+  display: flex;
+  gap: var(--em-empty-state-padding-default, 1rem);
+  margin: 0 auto;
+  overflow: hidden;
+  justify-content: center;
+}
 
+/* Breakpoint styles */
+@media (min-width: 1440px) {
+  .wrapper {
+    width: 69.8125rem;
+    height: 43.9375rem;
   }
-  
-  /* Breakpoint styles */
-  @media (min-width: 1440px) {
-    .wrapper {
-      width: 69.8125rem;
-      height: 43.9375rem;
-    }
+}
+
+@media (min-width: 768px) and (max-width: 1439px) {
+  .wrapper {
+    width: 32.5rem;
+    height: 43.9375rem;
   }
-  
-  @media (min-width: 768px) and (max-width: 1439px) {
-    .wrapper {
-      width: 32.5rem;
-      height: 43.9375rem;
-    }
+}
+
+@media (max-width: 767px) {
+  .wrapper {
+    width: 22.375rem;
+    height: 43.9375rem;
   }
-  
-  @media (max-width: 767px) {
-    .wrapper {
-      width: 22.375rem;
-      height: 43.9375rem;
-    }
-  }
-  
-  .column {
-    display: flex;
-    flex-direction: column;
-    gap: var(--em-empty-state-padding-default, 1rem);
-  }
-  
-  .short {
-    display: flex;
-    height: 8rem;
-    min-width: var(--em-empty-state-skeleton-size-min-width, 8rem);
-    min-height: var(--em-empty-state-skeleton-size-min-height, 8rem);
-    padding: 0.5rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-    flex-shrink: 0;
-    align-self: stretch;
-    border-radius: var(--em-border-radius-400, 2rem);
-    opacity: var(--em-empty-state-opacity-default, 0.6);
-    background: var(--em-empty-state-background-color-default, #F7F7F8);
-  }
-  
-  .tall {
-    display: flex;
-    min-width: var(--em-empty-state-skeleton-size-min-width, 8rem);
-    min-height: var(--em-empty-state-skeleton-size-min-height, 8rem);
-    padding: 0.5rem;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-    flex: 1 0 0;
-    align-self: stretch;
-    border-radius: var(--em-border-radius-400, 2rem);
-    opacity: var(--em-empty-state-opacity-default, 0.6);
-    background: var(--em-empty-state-background-color-default, #F7F7F8);
-  }
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  gap: var(--em-empty-state-padding-default, 1rem);
+}
+
+.short {
+  display: flex;
+  height: 8rem;
+  min-width: var(--em-empty-state-skeleton-size-min-width, 8rem);
+  min-height: var(--em-empty-state-skeleton-size-min-height, 8rem);
+  padding: 0.5rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+  flex-shrink: 0;
+  align-self: stretch;
+  border-radius: var(--em-border-radius-400, 2rem);
+  opacity: var(--em-empty-state-opacity-default, 0.6);
+  background: var(--em-empty-state-background-color-default, #f7f7f8);
+}
+
+.tall {
+  display: flex;
+  min-width: var(--em-empty-state-skeleton-size-min-width, 8rem);
+  min-height: var(--em-empty-state-skeleton-size-min-height, 8rem);
+  padding: 0.5rem;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+  flex: 1 0 0;
+  align-self: stretch;
+  border-radius: var(--em-border-radius-400, 2rem);
+  opacity: var(--em-empty-state-opacity-default, 0.6);
+  background: var(--em-empty-state-background-color-default, #f7f7f8);
+}
