--- a/src/remarkable-ui/shared/Card/Card.module.css
+++ b/src/remarkable-ui/shared/Card/Card.module.css
@@ -7,8 +7,6 @@
   border-radius: var(--em-card-border-radius-default, 2rem);
   background: var(--em-background-color-default, #f7f7f8);
   box-sizing: border-box;
-  height: 100%;
-  width: 100%;
 }
 
 .content {
@@ -24,6 +22,7 @@
   gap: var(--em-card-title-padding-default, 1rem);
   justify-content: space-between;
   position: relative;
+  align-items: center;
 }
 
 .titles {
